--- a/bankofflatiron-app/src/App.css
+++ b/bankofflatiron-app/src/App.css
@@ -36,3 +36,43 @@
     transform: rotate(360deg);
   }
 }
+table{
+  position: relative;
+  align-self: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 18px;
+  width: 90%;
+  border: none;
+  border-spacing: 0rem;
+  box-shadow: 10px 10px 10px #6e7074 ;
+  
+}
+th:first-of-type{
+  border-top-left-radius: 7px;
+}
+th:last-of-type{
+  border-top-right-radius: 7px;
+}
+tr:last-of-type td:first-of-type{
+  border-bottom-left-radius: 7px;
+}
+tr:last-of-type td:last-of-type{
+  border-bottom-right-radius: 7px;
+}
+tr{
+  height: 2.25rem;
+}
+tr:nth-child(odd){
+  background-color: cadetblue;
+}
+tr:nth-child(even){
+  background-color: beige;
+}
+#SearchValues{
+  width:35%;
+  height: 1.6rem;
+  font-size: 16px
+
+}
